# git-neko

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml  deploy.yml  lint-and-format.yml  publish.yml
git_neko/: __init__.py  download.py  version.py
src/git_neko/: __init__.py  __main__.py  cli.py  config.py  download.py  github.py  models.py  util.py  version.py
tests/: test_cli.py  test_download.py  test_github.py
