[build-system]
requires = ["uv_build>=0.9.28"]
build-backend = "uv_build"

[project]
name = "git-neko"
version = "1.29"
description = "CLI for syncing repositories from a specified GitHub user."
readme = "README.md"
authors = [{ name = "NecRaul", email = "necraul@kuroneko.dev" }]
license = "LGPL-2.1-only"
license-files = ["LICENSE"]
keywords = [
  "python",
  "repository downloader",
  "downloader",
  "repository",
  "git-neko",
  "kuroneko",
]
requires-python = ">=3.10"
dependencies = ["requests>=2.32.5"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/NecRaul/git-neko"
Documentation = "https://github.com/NecRaul/git-neko#readme"
Repository = "https://github.com/NecRaul/git-neko.git"
Issues = "https://github.com/NecRaul/git-neko/issues"

[project.scripts]
git-neko = "git_neko.cli:main"

[dependency-groups]
dev = [
  "ruff>=0.15.17",
  "ty>=0.0.50",
  "pre-commit>=4.6.0",
  "debugpy>=1.8.20",
  "pytest>=9.1.0",
]

[tool.uv]
default-groups = ["dev"]
python-preference = "only-managed"
trusted-publishing = "always"

[tool.uv.build-backend]
module-name = "git_neko"
module-root = "src"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
include = ["pyproject.toml", "src/**/*.py", "tests/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ty.src]
include = ["src/git_neko", "tests"]

[tool.ty.terminal]
error-on-warning = true

[tool.pytest]
testpaths = ["tests"]
